--- a/index.html
+++ b/index.html
@@ -2,68 +2,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TFN PRO SERVICES</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TFN PRO SERVICES</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <header>
-        <h1>TFN PRO SERVICES</h1>
-        <p>Reliable renovation & handyman solutions across Massachusetts and Rhode Island.</p>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#gallery">Gallery</a>
-            <a href="#quote">Request a Quote</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+  <header>
+    <div class="container">
+      <h1>TFN PRO SERVICES</h1>
+      <p>Reliable renovation & handyman solutions across Massachusetts and Rhode Island.</p>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#quote">Quote</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <section id="about">
-        <h2>About Us</h2>
-        <p>At TFN PRO SERVICES, we take pride in delivering top-quality renovation and handyman services. With experience, dedication, and attention to detail, we serve homes and businesses across Massachusetts and Rhode Island.</p>
-    </section>
+  <section id="about" class="container">
+    <h2>About Us</h2>
+    <p>We deliver high-quality renovation and handyman services with precision, care, and integrity. Proudly serving homes and businesses across Massachusetts and Rhode Island.</p>
+  </section>
 
-    <section id="services">
-        <h2>Our Services</h2>
-        <ul>
-            <li>Interior & Exterior Painting</li>
-            <li>Drywall Installation & Repair</li>
-            <li>Finish & Light Carpentry</li>
-            <li>Vinyl Flooring Installation</li>
-            <li>Power Washing</li>
-            <li>Handyman Services</li>
-        </ul>
-    </section>
+  <section id="services" class="container">
+    <h2>Our Services</h2>
+    <ul class="services-list">
+      <li>🎨 Interior & Exterior Painting</li>
+      <li>🧱 Drywall Installation & Repair</li>
+      <li>🪚 Finish & Light Carpentry</li>
+      <li>🪵 Vinyl Flooring Installation</li>
+      <li>💦 Power Washing</li>
+      <li>🛠️ Handyman Services</li>
+    </ul>
+  </section>
 
-    <section id="gallery">
-        <h2>Gallery</h2>
-        <p>[Images coming soon]</p>
-    </section>
+  <section id="gallery" class="container">
+    <h2>Gallery</h2>
+    <div class="gallery-placeholder">[Images coming soon]</div>
+  </section>
 
-    <section id="quote">
-        <h2>Request a Quote</h2>
-        <form id="quoteForm">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Tell us about your project..." required></textarea>
-            <button type="submit">Send Request</button>
-        </form>
-        <p id="quoteMessage"></p>
-    </section>
+  <section id="quote" class="container">
+    <h2>Request a Quote</h2>
+    <form id="quoteForm">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Tell us about your project..." required></textarea>
+      <button type="submit">Send Request</button>
+    </form>
+    <p id="quoteMessage"></p>
+  </section>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>📞 (781) 975-8383</p>
-        <p>📧 tfnservicess@gmail.com</p>
-        <p>📍 Serving Massachusetts and Rhode Island</p>
-    </section>
+  <section id="contact" class="container">
+    <h2>Contact Us</h2>
+    <p>📞 (781) 975-8383</p>
+    <p>📧 tfnservicess@gmail.com</p>
+    <p>📍 Massachusetts & Rhode Island</p>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 TFN PRO SERVICES. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 TFN PRO SERVICES. All rights reserved.</p>
+  </footer>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
